Created classification report

--- a/Starter_Code/machine_learning_trading_bot.ipynb
+++ b/Starter_Code/machine_learning_trading_bot.ipynb
@@ -2978,10 +2978,10 @@
    "outputs": [],
    "source": [
     "# Use a classification report to evaluate the model using the predictions and testing data\n",
-    "svm_testing_report = # YOUR CODE HERE\n",
+    "svm_testing_report = classification_report(svm_pred, y_test)\n",
     "\n",
     "# Print the classification report\n",
-    "# YOUR CODE HERE\n"
+    "print\n"
    ]
   },
   {
